add avatar change functionality

--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   },
   "dependencies": {
     "@prisma/client": "6.12.0",
+    "cloudinary": "^2.7.0",
     "marked": "^11.1.0",
     "next": "^15.3.5",
+    "next-cloudinary": "^6.16.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hot-toast": "^2.5.2",
+    "streamifier": "^0.1.1",
     "timeago-react": "^3.0.6",
     "timeago.js": "^4.0.2",
     "vercel": "^33.4.1",
