аптимизации + gemini update

--- a/package.json
+++ b/package.json
@@ -13,17 +13,25 @@
   },
   "dependencies": {
     "@google/genai": "^1.33.0",
-    "@prisma/client": "6.12.0",
+    "@prisma/adapter-mariadb": "^7.1.0",
+    "@prisma/client": "7.1.0",
+    "@prisma/client-runtime-utils": "^7.1.0",
+    "@prisma/extension-accelerate": "^3.0.1",
     "cloudinary": "^2.7.0",
+    "dotenv": "^17.2.3",
     "jsonwebtoken": "^9.0.2",
+    "lorem-ipsum": "^2.0.8",
     "marked": "^11.1.0",
     "next": "^16.0.10",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-hot-toast": "^2.5.2",
+    "sharp": "^0.34.5",
     "timeago-react": "^3.0.6",
     "timeago.js": "^4.0.2",
+    "to-zalgo": "^1.0.1",
     "vercel": "^33.4.1",
+    "zalgo": "^0.0.1",
     "zustand": "^5.0.5"
   },
   "devDependencies": {
@@ -41,7 +49,7 @@
     "globals": "^16.3.0",
     "jest": "^30.0.4",
     "prettier": "^3.6.2",
-    "prisma": "6.12.0",
+    "prisma": "7.1.0",
     "sass": "^1.89.1",
     "ts-jest": "^29.4.0",
     "typescript": "^5.3.3",
